//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  user_id String [pk]
  name String [not null]
  email String
  password String [not null]
  house_number Int [not null]
  roles String [not null]
  phone_number String
  address String
  last_login_ip String
  last_login_user_agent String
  last_login_timestamp String
  wallet wallet
  transactions transactions [not null]
}

Table wallet {
  id String [pk]
  userid String [unique, not null]
  balance Int [not null]
  type String [not null]
  user users [not null]
  transactions transactions [not null]
}

Table transactions {
  id String [pk]
  transaction_type String [not null]
  total_amount Int [not null]
  wallet_id String
  activity_id String
  user_id String [not null]
  status String [not null, default: 'PENDING']
  created_at DateTime [default: `now()`, not null]
  update_at DateTime [not null]
  user users [not null]
  wallet wallet
  activity activities
  activity_details activity_details [not null]
}

Table activities {
  id String [pk]
  title String [not null]
  description String [not null]
  start_date DateTime [not null]
  transaction_id String [unique, not null]
  photos media [not null]
  transaction transactions [not null]
  activity_details activity_details [not null]
}

Table media {
  id String [pk]
  name String [not null]
  size Int [not null]
  mime_type String [not null]
  url String [not null]
  media_type String
  activity_id String
  Activity activities
}

Table activity_details {
  id String [pk]
  activity_id String [not null]
  activity activities [not null]
  transaction_id String [not null]
  transaction transactions [not null]
  title String [not null]
  description String [not null]
  price Int [not null]
  quantity Int [not null]
}

Ref: wallet.userid - users.user_id

Ref: transactions.user_id > users.user_id

Ref: transactions.wallet_id > wallet.id

Ref: activities.transaction_id - transactions.id

Ref: media.activity_id > activities.id

Ref: activity_details.activity_id > activities.id

Ref: activity_details.transaction_id > transactions.id